dev/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: localhost:32000/gateway:local
          imagePullPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-network-policy
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway-client
        - podSelector:
            matchLabels:
              app: lieutenant
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: gateway-client
        - podSelector:
            matchLabels:
              app: lieutenant
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0  # Allow egress to the internet
