dev/lieutenant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lieutenant
  labels:
    app: lieutenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lieutenant
  template:
    metadata:
      labels:
        app: lieutenant
        role: lieutenant
    spec:
      hostNetwork: true  # Joins the Kubernetes network with the host's network
      containers:
        - name: open-webui
          image: localhost:32000/open_webui:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

        - name: sergeant-service
          image: localhost:32000/sergeant_service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
        - name: vector-embedding-service
          image: localhost:32000/vector_embedding_service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
        - name: intelligence-service
          image: localhost:32000/intelligence_service:local
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---

apiVersion: v1
kind: Service
metadata:
  name: lieutenant-service
  labels:
    app: lieutenant
spec:
  selector:
    app: lieutenant
  ports:
    - name: open-webui
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: sergeant-service
      protocol: TCP
      port: 81
      targetPort: 8000
    - name: vector-embedding-service
      protocol: TCP
      port: 82
      targetPort: 8001
    - name: intelligence-service
      protocol: TCP
      port: 83
      targetPort: 8002

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lieutenant-network-policy
spec:
  podSelector:
    matchLabels:
      app: lieutenant
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: lieutenant
        - podSelector:
            matchLabels:
              app: postgres
        - podSelector:
            matchLabels:
              app: gateway
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: lieutenant
        - podSelector:
            matchLabels:
              app: postgres
        - podSelector:
            matchLabels:
              app: gateway
